--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <script src="script.js"></script> 
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav id="navbar" class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">Home</a>
                 <button
@@ -51,9 +51,9 @@
             <h1>This is the Light theme</h1>
         </div>
         <div class="container mb-5">
-            <div class="row">
+            <div id="row" class="row">
                 <div class="col column">
-                    <div class="card">
+                    <div id="cards" class="card">
                         <div class="card-body">
                             <h2 class="card-title">Column 1 of 3</h2>
                             <div class="card-text">
@@ -104,7 +104,7 @@
                     </div>
                 </div>
                 <div class="col column">
-                    <div class="card">
+                    <div id="cards" class="card">
                         <div class="card-body">
                             <h2 class="card-title">Column 2 of 3</h2>
                             <div class="card-text">
@@ -154,7 +154,7 @@
                     </div>
                 </div>
                 <div class="col column">
-                    <div class="card">
+                    <div id="cards" class="card">
                         <div class="card-body">
                             <h2 class="card-title">Column 3 of 3</h2>
                             <div class="card-text">
@@ -371,7 +371,7 @@
             </div>
         </div>
         <div class="container mb-5">
-            <table class="table table-striped">
+            <table id="table" class="table table-striped">
                 <thead>
                     <tr>
                         <th scope="col">Some</th>
